<resources>
    <string name="app_name">Tinder dla ubogich</string>
    <string name="search">Przeglądaj</string>
    <string name="chats">Czaty</string>
    <string name="profile">Profil</string>
    <string name="settings">Ustawienia</string>
    <string name="earn_points">Punkty</string>
    <string name="camera">Kamerka</string>
    <string name="menu_chat_tag">2</string>
    <string name="menu_search_tag">1</string>
    <string name="menu_profile_tag">3</string>
    <string name="menu_earn_points_tag">4</string>
    <string name="menu_camera_tag">5</string>
    <string name="dont_have_account_register"><u>Nie masz konta? Zarejestruj się</u></string>
    <string name="password">Hasło:</string>
    <string name="email">Email:</string>
    <string name="haslo_hint">Hasło</string>
    <string name="email_hint">Email</string>
    <string name="do_you_want_to_convince">A czy ty chcesz się przekonać?</string>
    <string name="login_in">Zaloguj się</string>
    <string name="go_next">Dalej</string>
    <string name="back">Cofnij</string>
    <string name="register">Rejestracja</string>
    <string name="register_placeholder">Już tylko kilka minut dzieli cię \n od nowej znajomości</string>
    <string name="search_qeury_name">Wyszukaj</string>
    <string name="hobbies">Zainteresowania</string>
    <string name="agree">Potwierdź</string>
    <string name="title"><b><i>Tinder Dla Ubogich</i></b></string>
    <string name="ten_number">10</string>
    <string name="five_number">5</string>
    <string name="two_number">2</string>
    <string name="zero_number">0</string>
    <string name="close">Zamknij</string>
    <string name="options">Opcje</string>
    <string name="flash">Lampa Błyskowa</string>
    <string name="swap">Zmień Kamerkę</string>
    <string name="selfTimer">Samowyzwalacz</string>
    <string name="selfTimerReset">0 sekund</string>
    <string name="selfTimerFiveSec">5 sekund</string>
    <string name="selfTimerTwoSec">2 sekundy</string>
    <string name="selfTimerTenSec">10 sekund</string>
    <string name="photo">Zdjęcie</string>
    <string name="edition">Edycja Zdjęcia</string>
    <string name="clean">Wyczyść rysunek</string>
    <string name="back_brush">Cofnij ostatni malunek</string>
    <string name="brush_tickness">Grubość pędzla</string>
    <string name="brush_color">Kolor pędzla</string>
    <string name="brush_tickness_10">Grubość 10</string>
    <string name="brush_tickness_25">Grubość 25</string>
    <string name="brush_tickness_40">Grubość 40</string>
    <string name="brush_tickness_55">Grubość 55</string>
    <string name="profile_details"><b><i>Szczegóły profilu</i></b></string>
    <string name="basic_info">Podstawowe dane</string>
    <string name="smth_about_you">Coś o sobie</string>
    <string name="interests">Zainteresowania</string>
    <string name="photos">Zdjęcia</string>
</resources>
