<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.randomchatapplication.ui.auth.register.RegisterViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.auth.register.RegisterFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="255dp"
            android:src="@drawable/login_image"
            android:scaleType="fitXY"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/register_placeholder"
            android:textAlignment="center"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/register"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="2dp">

                <WebView
                    android:id="@+id/webViewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:overScrollMode="never"
                    android:scrollbars="none" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="@android:color/white"
                    android:hint="@string/email_hint"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:paddingStart="6dp"
                    android:paddingTop="6dp"
                    android:paddingEnd="6dp"
                    android:paddingBottom="6dp"
                    android:textColor="@color/colorPrimaryDark" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="2dp">

                <WebView
                    android:id="@+id/webViewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:overScrollMode="never"
                    android:scrollbars="none" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="@android:color/white"
                    android:hint="@string/haslo_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:paddingStart="6dp"
                    android:paddingTop="6dp"
                    android:paddingEnd="6dp"
                    android:paddingBottom="6dp"
                    android:textColor="@color/colorPrimaryDark" />
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_height="wrap_content" >
            <Button
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:drawablePadding="6dp"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:drawableEnd="@drawable/ic_heartbreak"
                android:text="@string/back"
                android:background="@drawable/ic_back"
                android:textColor="@color/colorAccent"
                android:layout_alignParentStart="true"
                />
            <Button
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:drawablePadding="6dp"
                android:drawableStart="@drawable/ic_heart_white"
                android:text="@string/go_next"
                android:background="@drawable/ic_next"
                android:textColor="@color/colorAccent"
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>
    </LinearLayout>
</layout>