<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.randomchatapplication.activites.main.MainActivityViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/drawer_background_2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="6dp">

                    <ImageView
                        android:id="@+id/menu_avatar"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center"
                        android:background="@drawable/oval"
                        android:scaleType="fitCenter" />

                    <View
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="4dp"
                        android:background="@drawable/login_state_active"
                        app:layout_anchor="@id/menu_avatar"
                        app:layout_anchorGravity="bottom|end"

                        />
                </androidx.coordinatorlayout.widget.CoordinatorLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center">

                        <View
                            android:id="@+id/heart_popper"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:background="@drawable/ic_heart" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:text="64" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:text="Jesteś super popularny" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Jakub, lat 20" />
                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:onClick="menuClick"
                android:tag="@string/menu_search_tag">

                <ImageView
                    android:id="@+id/ic_menu_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_research" />

                <TextView
                    style="@style/MenuText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/ic_menu_search"
                    android:text="@string/search" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:onClick="menuClick"
                android:tag="@string/menu_chat_tag">

                <ImageView
                    android:id="@+id/ic_menu_chats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_chat" />

                <TextView
                    style="@style/MenuText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/ic_menu_chats"
                    android:text="@string/chats" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:onClick="menuClick"
                android:tag="@string/menu_profile_tag">

                <ImageView
                    android:id="@+id/ic_menu_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_user" />

                <TextView
                    style="@style/MenuText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/ic_menu_profile"
                    android:text="@string/profile" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:onClick="menuClick"
                android:tag="@string/menu_earn_points_tag">

                <ImageView
                    android:id="@+id/ic_menu_earn_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_money" />

                <TextView
                    style="@style/MenuText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/ic_menu_earn_points"
                    android:text="@string/earn_points" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:onClick="menuClick"
                android:tag="@string/menu_camera_tag">

                <ImageView
                    android:id="@+id/ic_menu_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_camera" />

                <TextView
                    style="@style/MenuText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/ic_menu_camera"
                    android:text="@string/camera" />

            </RelativeLayout>

            <Button
                android:layout_width="164dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:background="@drawable/logout_button_background"
                android:text="Wyloguj się"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />


        </LinearLayout>


    </RelativeLayout>

</layout>