<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.randomchatapplication.ui.auth.LoginViewModel" />
    </data>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.auth.LoginFragment">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <ImageView
                android:id="@+id/login_mainPhoto"
                android:layout_width="match_parent"
                android:src="@drawable/login_image"
                android:scaleType="fitXY"
                android:layout_height="255dp" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:src="@drawable/login_logo_wrapper"
                app:layout_anchor="@id/login_mainPhoto"
                app:layout_anchorGravity="bottom|center_horizontal" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_you_want_to_convince"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="2dp"
                >
                <WebView
                    android:id="@+id/webViewEmail"
                    android:layout_width="match_parent"
                    android:scrollbars="none"
                    android:overScrollMode="never"
                    android:layout_height="match_parent"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:paddingBottom="6dp"
                    android:hint="@string/email_hint"
                    android:paddingTop="6dp"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@android:color/white"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:importantForAutofill="no" />
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="2dp"
                >
               <WebView
                    android:id="@+id/webViewPassword"
                    android:layout_width="match_parent"
                    android:scrollbars="none"
                    android:overScrollMode="never"
                    android:layout_height="match_parent"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:hint="@string/haslo_hint"
                    android:paddingBottom="6dp"
                    android:paddingTop="6dp"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@android:color/white"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:importantForAutofill="no" />
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textAlignment="textEnd"
                android:onClick="@{() -> viewModel.onRegisterClick()}"
                android:text="@string/dont_have_account_register"
                android:textColor="@color/colorPrimaryDark"
                />
            <Button
                android:layout_marginTop="32dp"
                android:layout_width="200dp"
                android:layout_gravity="center"
                android:layout_height="48dp"
                android:text="@string/login_in"
                android:textAllCaps="false"
                android:onClick="@{() -> viewModel.onLoginClick()}"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:background="@drawable/login_button_drawable"
                />
        </LinearLayout>

    </LinearLayout>

</layout>